crates/keron-lang/tests/corpus/errors/check/secret_assigned_from_string.snap
---
source: crates/keron-lang/tests/harness/mod.rs
---
error: type mismatch: expected `Secret`, found `String`
  --> 1:21
  |
1 | val token: Secret = "plain-text-token"
  |                     ^^^^^^^^^^^^^^^^^^
